--- a/res/layout/my_workfans.xml
+++ b/res/layout/my_workfans.xml
@@ -7,11 +7,44 @@
 
 <include layout="@layout/main_top_layout" />
 
+<RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="职位"
+        android:orientation="horizontal" >
 
+        <RadioButton
+            android:id="@+id/radioButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_tongyi"
+            android:button="@null"
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_2" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_weitongyi"
+            android:button="@null"
+            android:checked="true"
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_2" />
+    </RadioGroup>
+    <ListView
+    android:id="@+id/lwork"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
+</ListView>
 <ListView
     android:id="@+id/lyaoqing"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 </ListView>
-
 </LinearLayout>
